--- a/style.css
+++ b/style.css
@@ -1,25 +1,86 @@
-@import url('https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans');
+@import 'https://use.fontawesome.com/releases/v5.7.1/css/all.css';
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Libre+Franklin');
+
 
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
-    width: 600px;
+    width: 700px;
   }
 }
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
-    width: 400px;
+    width: 600px;
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 300px;
+    width: 400px;
   }
 }
 
+a {
+  color: #f38181;
+  text-decoration: none;
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+          transition:         transform .8s ease-in-out;
+
+}
+
+a:hover{
+    -webkit-stroke-width: 5.3px;
+      -webkit-stroke-color: #FFFFFF;
+      -webkit-fill-color: #FFFFFF;
+      text-shadow: 1px 0px 20px yellow;
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+
+}
+
+
+.tiger {
+  border-radius: 50%;
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+          transition:         transform .8s ease-in-out;
+}
+.tiger:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.slidein {
+  /* This section calls the slideInFromLeft animation we defined above */
+  animation: 1s ease-out 0s 1 slideInFromLeft;
+
+  background: #333;
+  padding: 30px;
+}
+
+
+
+h1, h2 {
+  font-family: 'Libre Franklin', sans-serif;}
+
+
+body {
+    font-family: 'Libre Baskerville', serif;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+}
 
 .grid-container {
   margin: 0 auto;
@@ -124,7 +185,7 @@ h2 {
 }
 
 .card-colour {
-  background-color: #EFF2D8;
+  background-color: #EFF2D840;
 }
 
 .card {
@@ -138,6 +199,11 @@ h2 {
 .img-circle {
   width: 300px;
   border-radius: 50%;
+  filter: grayscale(100%);
+}
+
+.img-circle:hover {
+  filter: grayscale(0%);
 }
 
 .social-icons {
@@ -153,4 +219,51 @@ h2 {
 .list-inline {
   list-style: none;
   padding-left: 0px;
+}
+body, html {
+  height: 100%;
+    /* The image used */
+  background-image: url("https://picsum.photos/g/2000/1000");
+    background-color: hsla(0,0%,100%,0.50);
+    background-blend-mode: overlay;
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
+.round-box {
+  border-radius: 4px;
+}
+
+.animation {
+    mix-blend-mode: multiply;
+    text-align: center;
+    margin: 0;
+    animation: glow 2s infinite;
+}
+
+@keyframes glow {
+    0% {
+        text-shadow: 0 0 10px white;
+    }
+
+    15% {
+        text-shadow: 2px 2px 10px rgba(255, 255, 255, 1),
+                   -2px -2px 10px rgba(255, 255, 255, 1);
+    }
+    30% {
+        text-shadow: 2px 2px 4px rgba(255, 255, 255, .7),
+                   -2px -2px 4px rgba(255, 255, 255, .7);
+    }
+    50% {
+        text-shadow: 20px 20px 100px rgba(255, 255, 255, .5),
+                   -20px -20px 100px rgba(255, 255, 255, .5);
+    }
 }
